# we-love-colors

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .woodpecker.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  examples.py  fetch.py  fetchCOPIC.py  fetchDULUX.py  fetchPRISMACOLOR.py  fetchRAL.py  main.py  palette.py  process.php  process.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup.sh  tasks.py
examples/: build.py  clipboard.js  examples.css  grid.php  index.html  index.php
examples/copic/: index.html  index.php
examples/dulux/: index.html  index.php
examples/hks/: index.php
examples/ncs/: index.php
examples/pantone/: index.html  index.php
examples/prismacolor/: index.html  index.php
examples/ral/: index.html  index.php
lib/: copic.py  dulux.py  pantone.py  prismacolor.py  ral.py
src/colors/: __init__.py  cli.py  copic.py  dulux.py  palette.py  pantone.py  prismacolor.py  ral.py  utils.py
src/colors/helpers/: nat_sort.py
src/colors/palettes/: __init__.py  copic.py  dulux.py  ncs.py  palette.py  pantone.py  prismacolor.py  ral.py
src/farben/: __init__.py  palette.py  utils.py
src/farben/palettes/: __init__.py  copic.py  dulux.py  hks.py  ncs.py  pantone.py  prismacolor.py  ral.py
tests/: test_cli.py  test_utils.py
we_love_colors/: cli.py  copic.py  palette.py  prismacolor.py
we_love_colors/helpers/: nat_sort.py
